--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<a href="viber://pa?chatURI=swelly&text=ABCE">link</a
-<a href="viber://pa?chatURI=pck_test_bot2&text=ABCE">link</a
+  <a href="viber://pa?chatURI=swelly&text=ABCE">link</a><br><br>
+  <a href="viber://pa?chatURI=pck_test_bot2&text=ABCE">link</a>
 
 </body>
 </html>
