--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 
-  <a href="viber://pa?chatURI=swelly&text=ABCE">link</a><br><br>
-  <a href="viber://pa?chatURI=pck_test_bot2&text=ABCE">link</a>
+  <h1><a href="viber://pa?chatURI=pck_test_bot2&text=ABCE">link</a></h1>
 
 </body>
 </html>
