--- a/index.html
+++ b/index.html
@@ -1,8 +1,66 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+  
+  <link rel="shortcut icon" href="./ifrc-digital-32x32.png" />
+  
+  <style>
+    body {
+      background: #f0f0f0;
+    }
+    .content {
+      background: #fff;
+    }
+    .vertical-center {
+      min-height: 100%;
+      min-height: 100vh; 
+      display: flex;
+      align-items: center;
+    }
+    #logos {
+      margin: 12px;
+    }
+    #logo-ifrc {
+      height: 50px;
+    }
+    #logo-pck {
+      height: 60px;
+      margin-right: 12px;
+    }
+  </style>
+    
+  
+</head>
 <body>
 
-  <h1 id="link_container"></h1>
+  
+  <div class="container">
+   <div class="row vertical-center">
+     <div class="content rounded-3">
+       <div id="logos">
+         <img id="logo-pck" src="./pck.png" alt="PCK logo" />
+         <img id="logo-ifrc" src="./Logo-Horizontal-RGB-300ppi.png" alt="IFRC logo" />
+       </div>
+       <h3 class="display-6">hello world</h3>
+       <p class="lead">This link is for the intended recipient and will only work once. 
+         Please connect with the Viber bot using the link. When it opens, send the prepopulated message
+         (it will be a short text code). The bot will then confirm the code has not already been used, 
+         and ask you a series of questions to determine your eligibility for the program.
+       </p>
+       <hr class="my-4">
+       <p class="lead" id="link_container"></p>
+     </div>
+   </div>
+ </div>
+  
 
 </body>
 <script>
@@ -15,7 +73,7 @@ const text = urlParams.get('text');
 console.log(text);
 if (text) {
   let anchor = document.createElement('a');
-  let textNode = document.createTextNode("click this link to launch Viber");
+  let textNode = document.createTextNode("click this link to launch Viber, then send the prepopulated short code");
   anchor.appendChild(textNode);
   anchor.href = "viber://pa?chatURI=pck_test_bot2&text=" + text;
   document.getElementById("link_container").appendChild(anchor);
